--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ html {
   body {
     display: flex;
     flex-direction: column;
-    height: 100vh; /* Avoid the IE 10-11 `min-height` bug. */
+    height: 100vh; 
+    background:url('./assets/circles-dark.png');/* Avoid the IE 10-11 `min-height` bug. */
   }
   .content {
     flex: 1 0 auto; /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
